codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__backend_banners_tests__backend_banner_information_dismissible.snap
---
source: tui/src/chatwidget/tests/backend_banners_tests.rs
expression: normalize_snapshot_paths(rendered)
---
  Selected model usage exhausted
  Ask your owner for credits or switch to another model.

  esc to dismiss · type to continue


› Ask ZIPCODE to do anything

  test-model-a default · /tmp/project
